# SimpleFlowTreeBBCFVTX

./: .gitignore  Condo  Makefile.am  README.txt  RunMyMacro.C  RunMyMacro_v1223.C  Run_SimpleFlowTreeBBCFVTX.C  Run_VTX_event_plane.C  SimpleFlowTreeBBCFVTX.C  SimpleFlowTreeBBCFVTX.h  SimpleFlowTreeBBCFVTXLinkDef.h  VTX_event_planeLinkDef.h  VTX_event_plane_reco.C  VTX_event_plane_reco.h  VTX_event_plane_reco.h.~1.18.~  analyze_theo.C  makerunlist.sh  run16_analysis.csh
wrk/: Condo  Condo_200  Condo_3HeAu  Condo_pAu  Kondo  Kondo_200  Kondo_200_short2  Makefile  Pondo  RpPar.h  Vondo  Wondo  Wondo_200  ccompile.sh  clusterratiorun.pl  compile.sh  compile_eventplane.sh  cumulants.cpp  cumulants.csh  cumulants_3HeAu.cpp  cumulants_3HeAu_class.cpp  cumulants_pAu.cpp  eventcounter.pl  eventplane.cpp  flattening.cpp  make_plots.C  mcln.pl  minbias.cpp  post_ana.cpp  post_ana_bbc_fvtx.cpp  post_ana_bbc_fvtx_DEV.cpp  post_ana_shengli_merge.cpp  qcompile.sh  qsimple.cpp  run_flattening.C  weight.cpp
wrk/CumulantStuff/: dothething_components.C  dothething_cumulants.C  thing1.C
wrk/MakePlots/: calculate_epreso.C  dAu_D_ppplane.root  dAu_cumulant200.root  delta.C  diehanddieverletzt.C  draw_ep.C  event_plane_testing.C  make_cumulants.C  makeplot_vn2pc.C  makeplot_vnEP.C  phidist_fvtx_layers.C  phidist_layers_and_rings.C  plot_ppb_pbpb.C  show_layers_vn.C  simple_six.C  supertemp_ewls.C  temp_2pc.C  temp_4pc.C  temp_clustrack.C  temp_compare_rsep.C  temp_compareweight_vnEP.C  temp_decorrelation.C  temp_new_4pc.C  temp_npc1.C  temp_runbyrun_epreso.C  temp_runbyrun_fullsuite.C  (+8 more)
(+28 files in other folders)
